feat: finaliza perfil pessoal e adiciona github

--- a/meu-perfil/index.html
+++ b/meu-perfil/index.html
@@ -36,6 +36,7 @@
   <section id="contato">
     <h2>Contato</h2>
     <p>📧 E-mail: <a href="mailto:nicolly.aluno@senai.br">nicolly1606@gmail.com</a></p>
+    <p>🐱‍💻 GitHub: <a href="https://github.com/NicollySantos116" target="_blank">https://github.com/NicollySantos116</a></p>
     <p>💼 LinkedIn: <a href="#" target="_blank">https://www.linkedin.com/in/nicolly-rodrigues-de-souza-santos-344461358//a></p>
   </section>
 
